# PeiLian

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ROADMAP.md
docs/phases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.1.md  phase-5.md
personas/: high_net_worth_skeptic.yaml  nearing_retirement.yaml  price_sensitive_midcareer.yaml  trust_issue_sme_owner.yaml  young_family_new_parent.yaml
scenarios/: coffee_followup.yaml  office_first_meet.yaml  phone_intro.yaml
scripts/: check_stability_p3.py  demo_p0.py  demo_p1.py  demo_p2.py  demo_p3.py  demo_p4.py
src/peilian/: config.py  conversations.py  customer_state.py  dialogue.py  judge.py  judge_prompts.py  observer.py  persona.py  persona_factory.py  prompts.py  report.py  rules.py  scenario.py  scenario_factory.py  state_summary.py
src/peilian/server/: __main__.py  app.py  schemas.py  session_store.py
src/peilian/server/routes/: chat.py  personas.py  report.py  scenarios.py  session.py
src/peilian/server/static/: chat.html  index.html  persona_form.html  report.html  scenario_form.html
tests/: test_colloquial_prompt.py  test_customer_state.py  test_dialogue_cleanup.py  test_dialogue_state_injection.py  test_judge.py  test_judge_parse.py  test_judge_prompts.py  test_judge_render.py  test_observer.py  test_persona.py  test_persona_factory.py  test_personas_create.py  test_prompts.py  test_report.py  test_rules.py  test_scenario_factory.py  test_scenarios_api.py  test_server.py  test_session_with_scenario.py  test_state_summary.py
(+5 files in other folders)
