[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peilian"
version = "0.0.1"
description = "PeiLian — 寿险代理人文本陪练系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
